# modorganizer-cpp-plugin

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  mo2_cpp_plugin.cpp  mo2_cpp_plugin.h  mo2_cpp_plugin_en.ts  resources.qrc  test-cpp-plugin.cpp  test-cpp-plugin.h
src/ui/: dialog.ui
uibase/: executableinfo.h  guessedvalue.h  idownloadmanager.h  imodinterface.h  imodlist.h  imoinfo.h  iplugin.h  iplugindiagnose.h  iplugingame.h  iplugininstaller.h  iplugininstallercustom.h  iplugininstallersimple.h  ipluginlist.h  ipluginproxy.h  iplugintool.h  iprofile.h  questionboxmemory.h  report.h  tutorabledialog.h  tutorialcontrol.h  uibase.lib  utility.h  versioninfo.h
